; ModuleID = '/home/carl/AnghaBench/freebsd/bin/ls/extr_print.c_mbswidth.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/ls/extr_print.c_mbswidth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MB_LEN_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @mbswidth to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mbswidth(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* %6, align 8
  store i64 0, i64* %5, align 8
  br label %9

9:                                                ; preds = %31, %1
  %10 = load i8*, i8** %3, align 8
  %11 = load i64, i64* %6, align 8
  %12 = getelementptr inbounds i8, i8* %10, i64 %11
  %13 = load i32, i32* @MB_LEN_MAX, align 4
  %14 = call i64 @mbrtowc(i32* %4, i8* %12, i32 %13, i32* null)
  store i64 %14, i64* %7, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %35

16:                                               ; preds = %9
  %17 = load i64, i64* %7, align 8
  %18 = icmp eq i64 %17, -1
  br i1 %18, label %22, label %19

19:                                               ; preds = %16
  %20 = load i64, i64* %7, align 8
  %21 = icmp eq i64 %20, -2
  br i1 %21, label %22, label %23

22:                                               ; preds = %19, %16
  store i64 -1, i64* %2, align 8
  br label %37

23:                                               ; preds = %19
  %24 = load i64, i64* %7, align 8
  %25 = load i64, i64* %6, align 8
  %26 = add i64 %25, %24
  store i64 %26, i64* %6, align 8
  %27 = load i32, i32* %4, align 4
  %28 = call i64 @wcwidth(i32 %27)
  store i64 %28, i64* %8, align 8
  %29 = icmp eq i64 %28, -1
  br i1 %29, label %30, label %31

30:                                               ; preds = %23
  store i64 -1, i64* %2, align 8
  br label %37

31:                                               ; preds = %23
  %32 = load i64, i64* %8, align 8
  %33 = load i64, i64* %5, align 8
  %34 = add i64 %33, %32
  store i64 %34, i64* %5, align 8
  br label %9

35:                                               ; preds = %9
  %36 = load i64, i64* %5, align 8
  store i64 %36, i64* %2, align 8
  br label %37

37:                                               ; preds = %35, %30, %22
  %38 = load i64, i64* %2, align 8
  ret i64 %38
}

declare dso_local i64 @mbrtowc(i32*, i8*, i32, i32*) #1

declare dso_local i64 @wcwidth(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
